@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.5.4
 ------------------------
+ o use byte compiler <2016-05-18, Wed>
+ o change any(is.na()) to anyNA() which is more efficient <2016-05-18, Wed> 
  o https://github.com/Bioconductor-mirror/ggtree/commit/559548c66b51253e8ccb983d353385838a81f106
 
 CHANGES IN VERSION 1.5.3
